# 202_new

./: .gitignore  README.md  booktable_backup.sql  direct_sendgrid_test.py  journal.md  scrum.md  test_gmail.py  test_notifications.py  test_notifications_standalone.py  test_sendgrid.py  test_simple_email.py  test_sms.py  xpvalue.md
BookTableBuddy/: .replit  BookTableBuddy_API_Collection.json  BookTable_API_Collection.json  CHANGELOG.md  package-lock.json  package.json  pyproject.toml
BookTableBuddy/attached_assets/: Pasted-Project-Requirements-Use-Case-Implement-an-end2end-BookTable-application-similar-to-OpenTable--1743707362950.txt
BookTableBuddy/backend/: db.sqlite3  requirements.txt
BookTableBuddy/backend/analytics/: __init__.py  urls.py  views.py
BookTableBuddy/backend/bookings/: __init__.py  admin.py  models.py  notifications.py  serializers.py  sms_notifications.py  urls.py  views.py
BookTableBuddy/backend/bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
BookTableBuddy/backend/booktable/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
BookTableBuddy/backend/restaurants/: __init__.py  admin.py  forms.py  models.py  serializers.py  test_upload.py  urls.py  views.py
BookTableBuddy/backend/users/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
BookTableBuddy/frontend/: package-lock.json  package.json  tailwind.config.js  update-colors.js
BookTableBuddy/frontend/public/: index.html  logout.js  manifest.json
BookTableBuddy/frontend/src/: App.js  index.css
BookTableBuddy/frontend/src/api/: api.js
(+63 files in other folders)
