[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
]
